syntax = "proto3";

package p2p_pb;

option go_package = ".;p2p_pb";

message MessageData {
    string id = 1;        // message id, allows requesters to use request data when processing a response
    int64 timestamp = 2;  // unix time
    string peerID = 3;    // id of peer that created the message
}

message Request {
    MessageData msgData = 1;  // general message data
    uint32 procedure = 2;     // procedure to be called
    bytes data = 3;           // request message data
}

message Response {
    MessageData msgData = 1;  // general message data
    string reqMsgID = 2;      // id of the requested message
    bytes data = 3;           // response message data
}
